Add Logo & navbar

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -17,8 +17,12 @@ body {
     margin: 0 auto;
 }
 
+a {
+    text-decoration: none;
+}
+
 header {
-    background-image: linear-gradient(rgba( 0, 0, 0, 0.70), rgba( 0, 0, 0, 0.70)), url(img/hero.jpg);
+    background-image: linear-gradient(rgba( 0, 0, 0, 0.70), rgba( 0, 0, 0, 0.70)), url(../img/hero.jpg);
     height: 100vh;
     background-position: center;
     background-size: cover;
@@ -49,7 +53,6 @@ h1 {
     border-radius: 200px;
     display: inline-block;
     border: 1px solid #e67e22;
-    text-decoration: none;
     font-weight: 300;
     transition: background-color 0.4s, color 0.3s, border-color 0.3s;
 }
@@ -71,4 +74,37 @@ h1 {
     border-color: #bf6516;
     background-color: #bf6516;
     color: #fff;
+}
+
+.logo {
+    height: 100px;
+    width: auto;
+    float: left;
+    margin-top: 20px;
+}
+
+.main-nav {
+    margin-top: 60px;
+    list-style: none;
+    float: right;
+}
+
+.main-nav li {
+    display: inline-block;
+    margin-left: 40px;
+}
+
+.main-nav a:link,
+.main-nav a:visited {
+    padding: 8px 0;
+    font-size: 90%;
+    color: #fff;
+    text-transform: uppercase;
+    border-bottom: 2px solid transparent;
+    transition: border-bottom 0.2s;
+}
+
+.main-nav a:hover,
+.main-nav a:active {
+    border-bottom: 2px solid #e67e22;
 }
