--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,3 +1,7 @@
+/* --------------------------------------
+    REUSABLE COMPONENT
+-----------------------------------------*/
+
 * {
     padding: 0;
     margin: 0;
